# SafeCredit-FL-Pro

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: client.py  client_app.py  data.py  model.py  server.py  server_app.py  task.py  train_eval.py  utils.py
compliance/: pipl_mapping.md
scripts/: compare_centralized_vs_fl.py  fairness_report.py  make_summary.py  plot_metrics.py  run_centralized.py
submission/: experiment_summary.md  fairness_by_age_band.csv  fairness_summary.md  threat_model.md
web/: appaskhab.py
